Fix header line height, hero image stretching, ssss about image too small, add roots line background

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -20,6 +20,7 @@ html, body {
     -moz-background-clip: text;
     -moz-text-fill-color: transparent;
     font-weight: 600;
+    line-height: 100%;
   }
 
   h1 {
